--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -33,7 +33,7 @@
 <div class="px-4 pt-5 pb-5 text-center text-white bg-dark" id="hero">
     <p class="mt-5 text-dark">.</p>
     <h1 class="display-4 fw-normal mb-5 col-lg-6 mx-auto mt-5">
-        <span style="color: #005EA6; ">Simplified</span> Cloud Delivery of any Software Product </h1>
+        <span class="text-primary">Simplified</span> Cloud Delivery of any Software Product </h1>
     <div class="col-lg-6 mx-auto">
         <!--        <p class="mb-4 invisible">Give us the opportunity to assess and help in your cloud modernization Journey</p>-->
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
@@ -60,11 +60,11 @@
 <div class="album py-5 bg-light" id="product">
     <div class="container">
 
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        <div class="row row-cols-1 row-cols-lg-3 g-3">
             <div class="col">
-                <div class="card  border-primary h-100">
-                    <div class="card-header bg-primary text-white py-4">
-                        <h5 class="card-title"><i class="bi-cloud-check-fill me-2"></i>
+                <div class="card h-100 border-0">
+                    <div class="card-header bg-white py-4 text-center border-0">
+                        <h5 class="fw-bold"><i class="bi-cloud-check-fill me-2"></i>
                             Collaboration for Cloud Teams</h5>
                     </div>
                     <div class="card-body">
@@ -83,10 +83,10 @@
                     <!--                    </div>-->
                 </div>
             </div>
-            <div class="col">
-                <div class="card  border-primary h-100">
-                    <div class="card-header bg-primary text-white py-4">
-                        <h5 class="card-title"><i class="bi-cloud-check-fill me-2"></i>
+            <div class="col ">
+                <div class="card border-0  h-100">
+                    <div class="card-header bg-white py-4 text-center border-0">
+                        <h5 class="fw-bold"><i class="bi-cloud-check-fill me-2"></i>
                             Continuous Delivery of Software Product</h5>
                     </div>
                     <div class="card-body">
@@ -108,10 +108,10 @@
                     <!--                    </div>-->
                 </div>
             </div>
-            <div class="col">
-                <div class="card border-primary h-100">
-                    <div class="card-header bg-primary text-white py-4">
-                        <h5 class="card-title"><i class="bi-cloud-check-fill me-2"></i>
+            <div class="col ">
+                <div class="card border-0 h-100">
+                    <div class="card-header bg-white py-4 text-center border-0">
+                        <h5 class="fw-bold"><i class="bi-cloud-check-fill me-2"></i>
                             Comprehensive Day 2 Operations</h5>
                     </div>
                     <div class="card-body">
@@ -169,8 +169,27 @@
         </div>
     </div>
 </div>
-<!-- Optional JavaScript; choose one of the two! -->
 
+<!--
+<div class="container-fluid marketing bg-dark text-white">
+    <h1 class="display-5 fw-normal">Team</h1>
+    <div class="row">
+        <div class="col-lg-4 text-center">
+            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
+                 role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <title>Placeholder</title>
+                <rect width="100%" height="100%" fill="#777"></rect>
+                <text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
+            </svg>
+
+            <h2 class="fw-normal mt-4">Pravanjan Choudury</h2>
+            <p>Co-founder</p>
+            <p>Stuff about Pravanjan</p>
+        </div>&lt;!&ndash; /.col-lg-4 &ndash;&gt;
+    </div>&lt;!&ndash; /.row &ndash;&gt;
+
+</div>
+-->
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
