--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -24,22 +24,23 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a href="#hero" class="nav-link active" aria-current="page">Home</a></li>
                 <li class="nav-item"><a href="#product" class="nav-link">Product</a></li>
-                <li class="nav-item"><a href="#discover" class="nav-link">Discover</a></li>
+                <li class="nav-item"><a href="#platform" class="nav-link">Platform</a></li>
+                <li class="nav-item"><a href="#team" class="nav-link">Team</a></li>
                 <li class="nav-item"><a href="/documentation/" class="nav-link">Documentation</a></li>
             </ul>
         </div>
     </div>
 </nav>
-<div class="px-4 pt-5 pb-5 text-center text-white bg-dark" id="hero">
+<div class="py-5 text-center text-white bg-dark" id="hero">
     <p class="mt-5 text-dark">.</p>
-    <h1 class="display-4 fw-normal mb-5 col-lg-6 mx-auto mt-5">
+    <h1 class="display-5  mb-5 col-lg-6 mx-auto mt-5">
         <span class="text-primary">Simplified</span> Cloud Delivery of any Software Product </h1>
     <div class="col-lg-6 mx-auto">
         <!--        <p class="mb-4 invisible">Give us the opportunity to assess and help in your cloud modernization Journey</p>-->
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-            <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">See the Demo</button>
+            <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Watch the Demo</button>
             <button type="button" class="btn btn-outline-light btn-lg px-4 me-sm-3">Start a free trial</button>
-            <button type="button" class="btn btn-outline-light btn-lg px-4">Take Assessment</button>
+            <!--            <button type="button" class="btn btn-outline-light btn-lg px-4">Take Assessment</button>-->
         </div>
     </div>
     <div class="col-lg-9 mx-auto">
@@ -69,10 +70,11 @@
                     </div>
                     <div class="card-body">
 
-                        <p class="card-text">Facilitate collaboration between Application Developers, Cloud operations
+                        <p class="card-text fw-light">Facilitate collaboration between Application Developers, Cloud
+                            operations
                             Team, NOC Teams, DBAs, Information security teams, Release Teams for your software product
                             delivery. </p>
-                        <ul class="">
+                        <ul class="fw-lighter">
                             <li class="">Facets.cloud Stack Definition Language (FSDL)</li>
                             <li class="">Git Based Stack definition and workflow</li>
                             <li class="">Standard and Custom validations options</li>
@@ -90,12 +92,13 @@
                             Continuous Delivery of Software Product</h5>
                     </div>
                     <div class="card-body">
-                        <p class="card-text">The FSDL based stack definition can be used to create a completely working
+                        <p class="card-text fw-light">The FSDL based stack definition can be used to create a completely
+                            working
                             instance of your software product on any cloud through Facets.cloud Control Plane that is
                             private to your deployment. Additionally, the control plane enables continuous mutations of
                             the software product. </p>
 
-                        <ul class="">
+                        <ul class="fw-lighter">
                             <li class="">Spin-off and teardown deployments/clusters in minutes</li>
                             <li class="">Automated scheduled delivery of the entire software product</li>
                             <li class="">Trigger notifications to QA suites, ChatOps tools and certify the
@@ -115,13 +118,14 @@
                             Comprehensive Day 2 Operations</h5>
                     </div>
                     <div class="card-body">
-                        <p class="card-text">Facets.cloud Run-time provides a comprehensive suite of tools and processes
+                        <p class="card-text fw-light">Facets.cloud Run-time provides a comprehensive suite of tools and
+                            processes
                             to simplify Day 2+ operations. Agents are deployed to reduce the work required for the
                             management of the underlying cloud and Kubernetes infrastructure of your software product.
                             Best Practice Policies and guardrails are enforced in a consistent manner across all
                             deployments. </p>
 
-                        <ul class="">
+                        <ul class="fw-lighter">
                             <li class="">Pre-configured Alerts and Dashboards for Observability and
                                 Compliance
                             </li>
@@ -143,32 +147,112 @@
 </div>
 
 
-<div class="container px-4 py-5" id="discover">
-    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-        <div class="col-10 col-sm-8 col-lg-7">
+<div class="container  py-5" id="platform">
+    <div class="row flex-lg-row-reverse align-items-center g-5 ">
+        <div class="col-12 mx-auto">
+            <h3 class="fw-light">About the Platform</h3>
+        </div>
+        <div class="col-12 col-lg-6 mx-auto">
             <img src="assets2/images/overview.png" class="d-block mx-lg-auto img-fluid" alt="Facets Explained"
                  height="500" loading="lazy">
         </div>
-        <div class="col-lg-5">
-            <h1 class="display-5 fw-normal lh-1 mb-3">Product Highlights</h1>
-            <p class="lead">We are a cloud automation platform for Developers, InfoSec and DevOps Teams. We
-                simplify provisioning and change management of applications, infrastructure components and databases
-                on multiple cloud platforms.</p>
-            <div class="lead mb-2">
-                <i class="bi-check2-circle me-2" style="color: #005EA6"></i> Well Integrated
-            </div>
-            <div class="lead mb-2">
-                <i class="bi-check2-circle me-2" style="color: #005EA6"></i> Transparent
-            </div>
-            <div class="lead mb-2">
-                <i class="bi-check2-circle me-2" style="color: #005EA6"></i> Extensible
-            </div>
-            <div class="lead mb-2">
-                <i class="bi-check2-circle me-2" style="color: #005EA6"></i> Cloud Native
+        <div class="col-12 col-lg-8 mx-auto">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4">
+                <div class="lead col">
+                    <i class="bi-check2-circle me-1"></i> Well Integrated
+                </div>
+                <div class="lead col">
+                    <i class="bi-check2-circle me-1"></i> Transparent
+                </div>
+                <div class="lead col">
+                    <i class="bi-check2-circle me-1"></i> Extensible
+                </div>
+                <div class="lead col">
+                    <i class="bi-check2-circle me-1"></i> Cloud Native
+                </div>
             </div>
         </div>
     </div>
 </div>
+
+<div class="album py-5 bg-light" id="team">
+    <div class="container ">
+        <div class="row flex-lg-row-reverse align-items-center g-5 ">
+            <div class="col-12 mx-auto">
+                <h3 class="fw-light">The Team</h3>
+            </div>
+
+            <div class="row row-cols-1 row-cols-lg-3 g-3">
+                <div class="col">
+                    <div class="card h-100 border-0">
+                        <div class="card-header bg-white py-4 text-center border-0">
+                            <h5 class="fw-bold"></i>
+                                Pravanjan Choudhury</h5>
+                        </div>
+                        <div class="card-body">
+                            <div class="text-center mb-3">
+                                <img src="assets2/images/pravanjan.jpeg" class="img-thumbnail" width="200px">
+
+                            </div>
+                            <div class="text-center">
+                                <p class="card-text fw-light">Co-founder Facets.cloud</p>
+                            </div>
+                            <div class="lead text-center">
+                                About Pravanjan Choudhury
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border-0">
+                        <div class="card-header bg-white py-4 text-center border-0">
+                            <h5 class="fw-bold"></i>
+                                Anshul Sao</h5>
+                        </div>
+                        <div class="card-body">
+                            <div class="text-center mb-3">
+                                <img src="assets2/images/anshul.png" class="img-thumbnail" width="200px">
+
+                            </div>
+                            <div class="text-center">
+                                <p class="card-text fw-light">Co-founder Facets.cloud</p>
+                            </div>
+                            <div class="lead text-center">
+                                About Anshul Sao
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border-0">
+                        <div class="card-header bg-white py-4 text-center border-0">
+                            <h5 class="fw-bold"></i>
+                                Rohit Raveendran</h5>
+                        </div>
+                        <div class="card-body">
+                            <div class="text-center mb-3">
+                                <svg class="bd-placeholder-img rounded" width="200" height="200"
+                                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 200x200"
+                                     preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
+                                    <rect width="100%" height="100%" fill="#868e96"></rect>
+                                    <text x="50%" y="50%" fill="#dee2e6" dy=".3em">200x200</text>
+                                </svg>
+
+                            </div>
+                            <div class="text-center">
+                                <p class="card-text fw-light">Co-founder Facets.cloud</p>
+                            </div>
+                            <div class="lead text-center">
+                                About Rohit Raveendran
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <!--
 <div class="container-fluid marketing bg-dark text-white">
