--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="icon" type="image/x-icon" href="assets2/images/fav.png">
     <!-- Bootstrap CSS -->
     <link href="assets2/css/custom.css" rel="stylesheet">
-    <title>Facets.cloud</title>
+    <title>Facets.cloud - Cloud Engineering Simplified</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 </head>
 <body data-bs-spy="scroll" data-bs-target="#navbar">
@@ -34,12 +35,26 @@
 <div class="py-5 text-center text-white bg-dark" id="hero">
     <p class="mt-5 text-dark">.</p>
     <h1 class="display-5  mb-5 col-lg-6 mx-auto mt-5">
-        <span class="text-primary">Simplified</span> Cloud Delivery of any Software Product </h1>
+        <span class="text-primary">Simplified</span> Cloud Delivery of your Software Product </h1>
     <div class="col-lg-6 mx-auto">
         <!--        <p class="mb-4 invisible">Give us the opportunity to assess and help in your cloud modernization Journey</p>-->
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
             <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Watch the Demo</button>
-            <button type="button" class="btn btn-outline-light btn-lg px-4 me-sm-3">Start a free trial</button>
+            <div style="text-align:center;"><a class="typeform-share btn btn-outline-light btn-lg px-4 me-sm-3"
+                                               href="https://form.typeform.com/to/rN6DCIzP?typeform-medium=embed-snippet"
+                                               data-mode="popup"
+                                               data-size="100" target="_blank">Start a free trial</a></div>
+            <script> (function () {
+                var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement,
+                    gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://embed.typeform.com/";
+                if (!gi.call(d, id)) {
+                    js = ce.call(d, "script");
+                    js.id = id;
+                    js.src = b + "embed.js";
+                    q = gt.call(d, "script")[0];
+                    q.parentNode.insertBefore(js, q)
+                }
+            })() </script>
             <!--            <button type="button" class="btn btn-outline-light btn-lg px-4">Take Assessment</button>-->
         </div>
     </div>
@@ -195,10 +210,10 @@
 
                             </div>
                             <div class="text-center">
-                                <p class="card-text fw-light">Co-founder Facets.cloud</p>
+                                <p class="card-text fw-light">Co-founder</p>
                             </div>
                             <div class="lead text-center">
-                                About Pravanjan Choudhury
+                                <a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -215,10 +230,10 @@
 
                             </div>
                             <div class="text-center">
-                                <p class="card-text fw-light">Co-founder Facets.cloud</p>
+                                <p class="card-text fw-light">Co-founder</p>
                             </div>
                             <div class="lead text-center">
-                                About Anshul Sao
+                                <a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -231,19 +246,13 @@
                         </div>
                         <div class="card-body">
                             <div class="text-center mb-3">
-                                <svg class="bd-placeholder-img rounded" width="200" height="200"
-                                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 200x200"
-                                     preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-                                    <rect width="100%" height="100%" fill="#868e96"></rect>
-                                    <text x="50%" y="50%" fill="#dee2e6" dy=".3em">200x200</text>
-                                </svg>
-
+                                <img src="assets2/images/rohit.jpeg" class="img-thumbnail" width="200px">
                             </div>
                             <div class="text-center">
-                                <p class="card-text fw-light">Co-founder Facets.cloud</p>
+                                <p class="card-text fw-light">Co-founder</p>
                             </div>
                             <div class="lead text-center">
-                                About Rohit Raveendran
+                                <a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
