--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -39,7 +39,9 @@
     <div class="col-lg-6 mx-auto">
         <!--        <p class="mb-4 invisible">Give us the opportunity to assess and help in your cloud modernization Journey</p>-->
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-            <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Watch the Demo</button>
+            <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">Watch the Demo
+            </button>
             <div style="text-align:center;"><a class="typeform-share btn btn-outline-light btn-lg px-4 me-sm-3"
                                                href="https://form.typeform.com/to/rN6DCIzP?typeform-medium=embed-snippet"
                                                data-mode="popup"
@@ -68,6 +70,18 @@
             </div>
             <div class="lead mb-2 col-lg-4">
                 <i class="bi-cloud-check-fill me-2"></i> Comprehensive Day 2 Operations
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-centered ">
+        <div class="modal-content">
+            <div class="modal-body">
+                <div class="ratio ratio-16x9">
+                    <iframe src="https://www.youtube.com/embed/_YEhHpObXYg" title="YouTube video" allowfullscreen></iframe>
+                </div>
             </div>
         </div>
     </div>
