--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -45,7 +45,7 @@
             <div style="text-align:center;"><a class="typeform-share btn btn-outline-light btn-lg px-4 me-sm-3"
                                                href="https://form.typeform.com/to/rN6DCIzP?typeform-medium=embed-snippet"
                                                data-mode="popup"
-                                               data-size="100" target="_blank">Start a free trial</a></div>
+                                               data-size="80" target="_blank">Start a free trial</a></div>
             <script> (function () {
                 var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement,
                     gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://embed.typeform.com/";
@@ -79,8 +79,8 @@
     <div class="modal-dialog modal-xl modal-dialog-centered ">
         <div class="modal-content">
             <div class="modal-body">
-                <div class="ratio ratio-16x9">
-                    <iframe src="https://www.youtube.com/embed/_YEhHpObXYg" title="YouTube video" allowfullscreen></iframe>
+                <div class="ratio ratio-16x9" id="yt-player">
+                    <iframe src="https://www.youtube.com/embed/_YEhHpObXYg?enablejsapi=1" title="YouTube video" allowfullscreen id="yt-player-frame"></iframe>
                 </div>
             </div>
         </div>
@@ -298,10 +298,21 @@
 </div>
 -->
 <!-- Option 1: Bootstrap Bundle with Popper -->
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
+<script
+        src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+        integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
+        crossorigin="anonymous"></script>
 
+<script type="text/javascript">
+    $('#exampleModal').on('hidden.bs.modal', function () {
+        var el_src = $('#yt-player-frame').attr("src");
+        $('#yt-player-frame').attr("src",el_src);
+    });
+</script>
 <!-- Option 2: Separate Popper and Bootstrap JS -->
 <!--
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
