--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -227,7 +227,7 @@
                                 <p class="card-text fw-light">Co-founder</p>
                             </div>
                             <div class="lead text-center">
-                                <a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
+                                <a href="https://www.linkedin.com/in/pravanjan/" target="_blank"><i class="bi bi-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -247,7 +247,7 @@
                                 <p class="card-text fw-light">Co-founder</p>
                             </div>
                             <div class="lead text-center">
-                                <a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
+                                <a href="https://www.linkedin.com/in/anshul-sao-a132498/" target="_blank"><i class="bi bi-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -260,13 +260,13 @@
                         </div>
                         <div class="card-body">
                             <div class="text-center mb-3">
-                                <img src="assets2/images/rohit.jpeg" class="img-thumbnail" width="200px">
+                                <img src="assets2/images/rohit.png" class="img-thumbnail" width="200px">
                             </div>
                             <div class="text-center">
                                 <p class="card-text fw-light">Co-founder</p>
                             </div>
                             <div class="lead text-center">
-                                <a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
+                                <a href="https://www.linkedin.com/in/rohit-raveendran-1529b1131/" target="_blank"><i class="bi bi-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
