--- a/404.html
+++ b/404.html
@@ -39,7 +39,7 @@
     <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar" style="    height: 72px;">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <a href="index.html" class="navbar-brand"><img src="assets/img/logo_blue.png" alt="" style="max-height: 45px"></a>
+            <a href="index_old.html" class="navbar-brand"><img src="assets/img/logo_blue.png" alt="" style="max-height: 45px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="lni-menu"></i>
