--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <li class="nav-item"><a href="#platform" class="nav-link">Platform</a></li>
                 <li class="nav-item"><a href="#team" class="nav-link">Team</a></li>
                 <li class="nav-item"><a href="/documentation/" class="nav-link">Documentation</a></li>
+                <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -75,7 +76,7 @@
     </div>
 </div>
 
-<div class="album py-5 bg-white" id="builton">
+<div class="album py-5 bg-dark" id="builton">
     <div class="container">
 
     </div>
