Making new site live

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <div class="album py-5 bg-light" id="product">
     <div class="container">
 
-        <div class="row row-cols-1 row-cols-lg-3 g-3">
+        <div class="row row-cols-1 row-cols-lg-3 g-3 pt-3">
             <div class="col">
                 <div class="card h-100 border-0">
                     <div class="card-header bg-white py-4 text-center border-0">
@@ -186,7 +186,7 @@
 
 <div class="container  py-5" id="platform">
     <div class="row flex-lg-row-reverse align-items-center g-5 ">
-        <div class="col-12 mx-auto">
+        <div class="col-12 mx-auto pt-3">
             <h3 class="fw-light">About the Platform</h3>
         </div>
         <div class="col-12 col-lg-6 mx-auto">
@@ -215,8 +215,8 @@
 <div class="album py-5 bg-light" id="team">
     <div class="container ">
         <div class="row flex-lg-row-reverse align-items-center g-5 ">
-            <div class="col-12 mx-auto">
-                <h3 class="fw-light">The Team</h3>
+            <div class="col-12 mx-auto pt-3">
+                <h3 class="fw-light ">The Team</h3>
             </div>
 
             <div class="row row-cols-1 row-cols-lg-3 g-3">
