--- a/index.html
+++ b/index.html
@@ -40,47 +40,47 @@
     <div class="col-lg-6 mx-auto">
         <!--        <p class="mb-4 invisible">Give us the opportunity to assess and help in your cloud modernization Journey</p>-->
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-            <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3" data-bs-toggle="modal"
+            <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3 mx-2" data-bs-toggle="modal"
                     data-bs-target="#exampleModal">Watch the Demo
             </button>
-            <div style="text-align:center;"><a class="typeform-share btn btn-outline-light btn-lg px-4 me-sm-3"
-                                               href="https://form.typeform.com/to/rN6DCIzP?typeform-medium=embed-snippet"
-                                               data-mode="popup"
-                                               data-size="80" target="_blank">Start a free trial</a></div>
-            <script> (function () {
-                var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement,
-                    gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://embed.typeform.com/";
-                if (!gi.call(d, id)) {
-                    js = ce.call(d, "script");
-                    js.id = id;
-                    js.src = b + "embed.js";
-                    q = gt.call(d, "script")[0];
-                    q.parentNode.insertBefore(js, q)
-                }
-            })() </script>
-            <!--            <button type="button" class="btn btn-outline-light btn-lg px-4">Take Assessment</button>-->
-        </div>
+            <a class="btn btn-outline-light btn-lg px-4 mx-2"
+               href="https://form.typeform.com/to/rN6DCIzP?typeform-medium=embed-snippet"
+               data-mode="popup"
+               data-size="80" target="_blank">Start a free trial</a></div>
+        <script> (function () {
+            var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement,
+                gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://embed.typeform.com/";
+            if (!gi.call(d, id)) {
+                js = ce.call(d, "script");
+                js.id = id;
+                js.src = b + "embed.js";
+                q = gt.call(d, "script")[0];
+                q.parentNode.insertBefore(js, q)
+            }
+        })() </script>
+        <!--            <button type="button" class="btn btn-outline-light btn-lg px-4">Take Assessment</button>-->
     </div>
-    <div class="col-lg-9 mx-auto">
-        <div class="row">
-            <div class="lead mb-2 col-lg-4">
-                <i class="bi-cloud-check-fill me-2"></i> Collaboration for Cloud Teams
-            </div>
-            <div class="lead mb-2 col-lg-4">
-                <i class="bi-cloud-check-fill me-2"></i> Continuous Delivery of Software Product
-            </div>
-            <div class="lead mb-2 col-lg-4">
-                <i class="bi-cloud-check-fill me-2"></i> Comprehensive Day 2 Operations
-            </div>
-        </div>
-    </div>
+    <!--    Commented Out until the other modeule comes in-->
+    <!-- <div class="col-lg-9 mx-auto">
+         <div class="row">
+             <div class="lead mb-2 col-lg-4">
+                 <i class="bi-cloud-check-fill me-2"></i> Collaboration for Cloud Teams
+             </div>
+             <div class="lead mb-2 col-lg-4">
+                 <i class="bi-cloud-check-fill me-2"></i> Continuous Delivery of Software Product
+             </div>
+             <div class="lead mb-2 col-lg-4">
+                 <i class="bi-cloud-check-fill me-2"></i> Comprehensive Day 2 Operations
+             </div>
+         </div>
+     </div>-->
 </div>
 
-<div class="album py-5 bg-dark" id="builton">
+<!--<div class="album py-5 bg-dark" id="builton">
     <div class="container">
 
     </div>
-</div>
+</div>-->
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl modal-dialog-centered ">
