Making new site live

--- a/index.html
+++ b/index.html
@@ -43,22 +43,23 @@
             <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3 mx-2" data-bs-toggle="modal"
                     data-bs-target="#exampleModal">Watch the Demo
             </button>
-            <a class="btn btn-outline-light btn-lg px-4 mx-2"
-               href="https://form.typeform.com/to/rN6DCIzP?typeform-medium=embed-snippet"
-               data-mode="popup"
-               data-size="80" target="_blank">Start a free trial</a></div>
-        <script> (function () {
-            var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement,
-                gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://embed.typeform.com/";
-            if (!gi.call(d, id)) {
-                js = ce.call(d, "script");
-                js.id = id;
-                js.src = b + "embed.js";
-                q = gt.call(d, "script")[0];
-                q.parentNode.insertBefore(js, q)
-            }
-        })() </script>
-        <!--            <button type="button" class="btn btn-outline-light btn-lg px-4">Take Assessment</button>-->
+            <div style="text-align:center;"><a class="typeform-share btn btn-outline-light btn-lg px-4 me-sm-3"
+                                               href="https://form.typeform.com/to/rN6DCIzP?typeform-medium=embed-snippet"
+                                               data-mode="popup"
+                                               data-size="80" target="_blank">Start a free trial</a></div>
+            <script> (function () {
+                var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement,
+                    gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://embed.typeform.com/";
+                if (!gi.call(d, id)) {
+                    js = ce.call(d, "script");
+                    js.id = id;
+                    js.src = b + "embed.js";
+                    q = gt.call(d, "script")[0];
+                    q.parentNode.insertBefore(js, q)
+                }
+            })() </script>
+            <!--            <button type="button" class="btn btn-outline-light btn-lg px-4">Take Assessment</button>-->
+        </div>
     </div>
     <!--    Commented Out until the other modeule comes in-->
     <!-- <div class="col-lg-9 mx-auto">
