Making new site live

--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
     <div class="col-lg-6 mx-auto">
         <!--        <p class="mb-4 invisible">Give us the opportunity to assess and help in your cloud modernization Journey</p>-->
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-            <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3 mx-2" data-bs-toggle="modal"
+
+            <div style="text-align:center;">
+                <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3 mx-2" data-bs-toggle="modal"
                     data-bs-target="#exampleModal">Watch the Demo
-            </button>
+                </button>
+            </div>
             <div style="text-align:center;"><a class="typeform-share btn btn-outline-light btn-lg px-4 me-sm-3"
                                                href="https://form.typeform.com/to/rN6DCIzP?typeform-medium=embed-snippet"
                                                data-mode="popup"
