--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <div style="text-align:center;">
                 <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3 mx-2" data-bs-toggle="modal"
-                    data-bs-target="#exampleModal">Watch the Demo
+                        data-bs-target="#exampleModal">Watch the Demo
                 </button>
             </div>
             <div style="text-align:center;"><a class="typeform-share btn btn-outline-light btn-lg px-4 me-sm-3"
@@ -210,6 +210,24 @@
                 </div>
                 <div class="lead col">
                     <i class="bi-check2-circle me-1"></i> Cloud Native
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="album py-5 bg-dark text-white" id="pitch">
+    <div class="container ">
+        <div class="row">
+            <div class="col-12 mx-auto pt-3">
+                <h3 class="fw-light ">The Pitch</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 mx-auto pt-3">
+                <div style="position:relative;width:100%;height:0;padding-bottom:calc(56.25% + 40px);">
+                    <iframe allowfullscreen style="position:absolute; width: 100%; height: 100%;border: solid 1px #333;"
+                            src="https://www.beautiful.ai/embed/-McNtc1AeV8HYgSRzkB2?utm_source=beautiful_player&utm_medium=embed&utm_campaign=-MbeS_t_465uS_jgKFJd"></iframe>
                 </div>
             </div>
         </div>
