Embedding the Pitch

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li class="nav-item"><a href="#hero" class="nav-link active" aria-current="page">Home</a></li>
                 <li class="nav-item"><a href="#product" class="nav-link">Product</a></li>
                 <li class="nav-item"><a href="#platform" class="nav-link">Platform</a></li>
+                <li class="nav-item"><a href="#pitch" class="nav-link">Pitch</a></li>
                 <li class="nav-item"><a href="#team" class="nav-link">Team</a></li>
                 <li class="nav-item"><a href="/documentation/" class="nav-link">Documentation</a></li>
                 <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
